@@ -5,7 +5,7 @@ A few special variables you can set while using the Makefile:
 
 PROFILE=1 turns on profiling for the build of the doc wiki. Uses Devel::Profile
 
-NOTAINT=1 turns off the taint flag in the ikiwiki program. (Recommended
+NOTAINT=0 turns on the taint flag in the ikiwiki program. (Not recommended
 unless your perl is less buggy than mine -- see
 http://bugs.debian.org/411786)
 
