@@ -4,8 +4,7 @@ build: build-stamp
 build-stamp:
 	dh_testdir
 	perl Makefile.PL PREFIX=/usr INSTALLDIRS=vendor
-	# taint checking disabled due to perl bug #411786
-	NOTAINT=1 $(MAKE)
+	$(MAKE)
 	$(MAKE) test
 	touch build-stamp
 
